@@ -1,3 +1,8 @@
+2004-05-16  Bruno Haible  <bruno@clisp.org>
+
+	* genclisph.d (main) [TYPECODES && HAVE_SMALL_SSTRING]: Fix the
+	definition of TheS8string, TheS16string, TheS32string.
+
 2004-05-12  Bruno Haible  <bruno@clisp.org>
 
 	* makemake.in (XCFLAGS) [SPARC64]: Use only -O, not -O2.
